# rts-game-engine

./: .gitmodules  CMakeLists.txt  README.md  build.sh  rebuild.sh
.issues/: README.txt
.issues/ISSUE_1782840106_assset_to_blop_bin/: issue.md
.issues/ISSUE_1783254345_Model-Parser/: issue.md
assets/: REF.txt
cmake/: custom_func.cmake  options.cmake  platform_options.cmake
note/: render.txt
src/common/: CMakeLists.txt  file.cc  file.h  log.cc  log.h  macro.h  result.h  string_help.cc  string_help.h  type.h
src/game/: CMakeLists.txt  game.cc  game.h  info.h  main.cc  model.cc  model.h
src/game/engine/: model.cc  model.h  render.cc  render.h
src/game/engine/platform/: model_raylib_linux.cc  render_raylib_linux.cc
src/game/scene/: menu.cc  scene.h
